# thenextecho-source

./: .gitignore  README.md  build_template.sh  build_template.txt  install.sh
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: celery_app.py  celery_worker.py  database.py  main.py
backend/app/api/: endpoints.py
backend/app/api/endpoints/: jobs.py
backend/app/crud/: job.py
backend/app/migrations/: env.py
backend/app/models/: job.py
backend/app/schemas/: job.py
backend/app/tools/: script_writer.py
frontend/src/: index.css
thenextecho-template/: .gitignore  README.md
thenextecho-template/backend/: alembic.ini  requirements.txt
thenextecho-template/backend/app/: celery_app.py  celery_worker.py  database.py  main.py
thenextecho-template/backend/app/api/: router.py
thenextecho-template/backend/app/api/endpoints/: jobs.py  system.py  ws.py
thenextecho-template/backend/app/crud/: job.py
thenextecho-template/backend/app/migrations/: env.py
thenextecho-template/backend/app/migrations/versions/: initial_migration.py
thenextecho-template/backend/app/models/: job.py
thenextecho-template/backend/app/schemas/: job.py
thenextecho-template/backend/app/tools/: video_pipeline.py
thenextecho-template/frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
thenextecho-template/frontend/src/: App.tsx  index.css
thenextecho-template/frontend/src/components/ui/: button.tsx
